--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="home-image scroll-scale">
                 <div class="img-box">
-                    <img src="IMG/22.png" alt="">
+                    <img src="IMG/22.png" alt="Background Image One">
                 </div>
             <!-- insert lequid animation on the web-->
                 <div class="liquid-shape">
@@ -187,7 +187,7 @@
 
         <section id="about" class="about">
             <div class="img-about scroll-scale">
-                <img src="img/221.png" alt="">
+                <img src="img/23_Mesa de trabajo 1.png" alt="Background Image Two">
                 <div class="info-about1">
                     <span>01+</span>
                     <p>Years of Experience</p>
