--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="btn-box">
-                    <a href="CV.rar" class="btn">Downlod CV</a>
+                    <a href="./CV.rar" class="btn">Downlod CV</a>
                     <a href="#contact" class="btn">Hire Me Now</a>
                 </div>
 
@@ -67,14 +67,14 @@
                     "><i class='bx bxl-instagram' ></i></a>
                     <a href="https://dribbble.com/Ashanoo" target="-blank"><i class='bx bxl-dribbble' ></i></a>
                     <a href="https://www.linkedin.com/in/ashan-kavinda-984793203?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="https://github.com/ashanoo"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/ashanoo" target="_blank"><i class='bx bxl-github' ></i></a>
                 </div>
 
             </div>
 
             <div class="home-image scroll-scale">
                 <div class="img-box">
-                    <img src="IMG/22.png" alt="Background Image One">
+                    <img src="./IMG/22.png" alt="Background Image One">
                 </div>
             <!-- insert lequid animation on the web-->
                 <div class="liquid-shape">
@@ -187,7 +187,7 @@
 
         <section id="about" class="about">
             <div class="img-about scroll-scale">
-                <img src="img/23_Mesa de trabajo 1.png" alt="Background Image Two">
+                <img src="./img/23_Mesa de trabajo 1.png" alt="Background Image Two">
                 <div class="info-about1">
                     <span>01+</span>
                     <p>Years of Experience</p>
