--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         <section id="about" class="about">
             <div class="img-about scroll-scale">
-                <img src="../img/23_Mesa de trabajo 1.PNG" alt="Background Image Two">
+                <img src="./IMG/23.png" alt="Background Image Two">
                 <div class="info-about1">
                     <span>01+</span>
                     <p>Years of Experience</p>
@@ -426,7 +426,7 @@
     <div class="portfolio-gallery scroll-bottom">
         <div class="port-box mix product">
             <div class="port-image">
-                <img src="../img/1.jpg" alt="">
+                <img src="IMG/portfolio/11.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Model 3d and Cad drawing</h3>
@@ -440,7 +440,7 @@
 
         <div class="port-box mix product">
             <div class="port-image">
-                <img src="../.img/2.jpg" alt="">
+                <img src="IMG/portfolio/22.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Video Editor</h3>
@@ -454,7 +454,7 @@
 
         <div class="port-box mix inter">
             <div class="port-image">
-                <img src="../img/3.JPG" alt="">
+                <img src="IMG/portfolio/33.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Pixel-Vector Blend</h3>
@@ -468,7 +468,7 @@
 
         <div class="port-box mix inter">
             <div class="port-image">
-                <img src="../.img/4.JPG" alt="">
+                <img src="IMG/portfolio/44.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Advertising Design</h3>
@@ -482,7 +482,7 @@
 
         <div class="port-box mix inter">
             <div class="port-image">
-                <img src="../.img/5.JPG" alt="">
+                <img src="IMG/portfolio/55.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Flyer Design</h3>
@@ -496,7 +496,7 @@
 
         <div class="port-box mix web">
             <div class="port-image">
-                <img src="../.img/6.JPG" alt="">
+                <img src="IMG/portfolio/66.jpg" alt="">
             </div>
             <div class="port-content">
                 <h3>Web Design</h3>
