--- a/3d.html
+++ b/3d.html
@@ -16,67 +16,67 @@
 
        <div class="image-gallery">
 
-        <a href="IMG/3D/1-01.jpg" class="fly-1">
+        <a href="./IMG/3D/1-01.jpg" class="fly-1">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-02.jpg" class="fly-2">
+        <a href="./IMG/3D/1-02.jpg" class="fly-2">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-03.jpg" class="fly-3">
+        <a href="./IMG/3D/1-03.jpg" class="fly-3">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-04.jpg" class="fly-4">
+        <a href="./IMG/3D/1-04.jpg" class="fly-4">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-05.jpg" class="fly-5">
+        <a href="./IMG/3D/1-05.jpg" class="fly-5">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-06.jpg" class="fly-6">
+        <a href="./IMG/3D/1-06.jpg" class="fly-6">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-07.jpg" class="fly-7">
+        <a href="./IMG/3D/1-07.jpg" class="fly-7">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-08.jpg" class="fly-8">
+        <a href="./IMG/3D/1-08.jpg" class="fly-8">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-09.jpg" class="fly-9">
+        <a href="./IMG/3D/1-09.jpg" class="fly-9">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-10.jpg" class="fly-10">
+        <a href="./IMG/3D/1-10.jpg" class="fly-10">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-11.jpg" class="fly-11">
+        <a href="./IMG/3D/1-11.jpg" class="fly-11">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-12.jpg" class="fly-12">
+        <a href="./IMG/3D/1-12.jpg" class="fly-12">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-13.jpg" class="fly-13">
+        <a href="./IMG/3D/1-13.jpg" class="fly-13">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-14.jpg" class="fly-14">
+        <a href="./IMG/3D/1-14.jpg" class="fly-14">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-15.jpg" class="fly-15">
+        <a href="./IMG/3D/1-15.jpg" class="fly-15">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/3D/1-16.jpg" class="fly-16">
+        <a href="./IMG/3D/1-16.jpg" class="fly-16">
             <i class='bx bx-expand'></i>
         </a>
 
