--- a/adva.html
+++ b/adva.html
@@ -16,155 +16,155 @@
 
        <div class="image-gallery">
 
-        <a href="IMG/adv/1-01.png" class="fly-1">
+        <a href="./IMG/adv/1-01.png" class="fly-1">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-02.png" class="fly-2">
+        <a href="./IMG/adv/1-02.png" class="fly-2">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-03.png" class="fly-3">
+        <a href="./IMG/adv/1-03.png" class="fly-3">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-04.png" class="fly-4">
+        <a href="./IMG/adv/1-04.png" class="fly-4">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-05.png" class="fly-5">
+        <a href="./IMG/adv/1-05.png" class="fly-5">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-06.png" class="fly-6">
+        <a href="./IMG/adv/1-06.png" class="fly-6">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-07.png" class="fly-7">
+        <a href="./IMG/adv/1-07.png" class="fly-7">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-08.png" class="fly-8">
+        <a href="./IMG/adv/1-08.png" class="fly-8">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-09.png" class="fly-9">
+        <a href="./IMG/adv/1-09.png" class="fly-9">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-10.png" class="fly-10">
+        <a href="./IMG/adv/1-10.png" class="fly-10">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-11.png" class="fly-11">
+        <a href="./IMG/adv/1-11.png" class="fly-11">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-12.png" class="fly-12">
+        <a href="./IMG/adv/1-12.png" class="fly-12">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-13.png" class="fly-13">
+        <a href="./IMG/adv/1-13.png" class="fly-13">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-14.png" class="fly-14">
+        <a href="./IMG/adv/1-14.png" class="fly-14">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-15.png" class="fly-15">
+        <a href="./IMG/adv/1-15.png" class="fly-15">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-16.png" class="fly-16">
+        <a href="./IMG/adv/1-16.png" class="fly-16">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-17.png" class="fly-17">
+        <a href="./IMG/adv/1-17.png" class="fly-17">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-18.png" class="fly-18">
+        <a href="./IMG/adv/1-18.png" class="fly-18">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-19.png" class="fly-19">
+        <a href="./IMG/adv/1-19.png" class="fly-19">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-20.png" class="fly-20">
+        <a href="./IMG/adv/1-20.png" class="fly-20">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-21.png" class="fly-21">
+        <a href="./IMG/adv/1-21.png" class="fly-21">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-22.png" class="fly-22">
+        <a href="./IMG/adv/1-22.png" class="fly-22">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-23.png" class="fly-23">
+        <a href="./IMG/adv/1-23.png" class="fly-23">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-24.png" class="fly-24">
+        <a href="./IMG/adv/1-24.png" class="fly-24">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-25.png" class="fly-25">
+        <a href="./IMG/adv/1-25.png" class="fly-25">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-26.png" class="fly-26">
+        <a href="./IMG/adv/1-26.png" class="fly-26">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-27.png" class="fly-27">
+        <a href="./IMG/adv/1-27.png" class="fly-27">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-28.png" class="fly-28">
+        <a href="./IMG/adv/1-28.png" class="fly-28">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-29.png" class="fly-29">
+        <a href="./IMG/adv/1-29.png" class="fly-29">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-30.png" class="fly-30">
+        <a href="./IMG/adv/1-30.png" class="fly-30">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-31.png" class="fly-31">
+        <a href="./IMG/adv/1-31.png" class="fly-31">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-32.png" class="fly-32">
+        <a href="./IMG/adv/1-32.png" class="fly-32">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-33.png" class="fly-33">
+        <a href="./IMG/adv/1-33.png" class="fly-33">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-34.jpg" class="fly-34">
+        <a href="./IMG/adv/1-34.jpg" class="fly-34">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-35.jpg" class="fly-35">
+        <a href="./IMG/adv/1-35.jpg" class="fly-35">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-36.jpg" class="fly-36">
+        <a href="./IMG/adv/1-36.jpg" class="fly-36">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-37.jpg" class="fly-37">
+        <a href="./IMG/adv/1-37.jpg" class="fly-37">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/adv/1-38.jpg" class="fly-38">
+        <a href="./IMG/adv/1-38.jpg" class="fly-38">
             <i class='bx bx-expand'></i>
         </a>
 
