--- a/flyergallary.html
+++ b/flyergallary.html
@@ -16,135 +16,135 @@
 
        <div class="image-gallery">
 
-        <a href="IMG/Flyer/0.jpg" class="fly-1">
+        <a href="./IMG/Flyer/0.jpg" class="fly-1">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/1.jpg" class="fly-2">
+        <a href="./IMG/Flyer/1.jpg" class="fly-2">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/2.jpg" class="fly-3">
+        <a href="./IMG/Flyer/2.jpg" class="fly-3">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/3.jpg" class="fly-4">
+        <a href="./IMG/Flyer/3.jpg" class="fly-4">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/10.jpg" class="fly-5">
+        <a href="./IMG/Flyer/10.jpg" class="fly-5">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/11.jpg" class="fly-6">
+        <a href="./IMG/Flyer/11.jpg" class="fly-6">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/12.jpg" class="fly-7">
+        <a href="./IMG/Flyer/12.jpg" class="fly-7">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/13.jpg" class="fly-8">
+        <a href="./IMG/Flyer/13.jpg" class="fly-8">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/14.jpg" class="fly-9">
+        <a href="./IMG/Flyer/14.jpg" class="fly-9">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/15.jpg" class="fly-10">
+        <a href="./IMG/Flyer/15.jpg" class="fly-10">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/16.jpg" class="fly-11">
+        <a href="./IMG/Flyer/16.jpg" class="fly-11">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/17.jpg" class="fly-12">
+        <a href="./IMG/Flyer/17.jpg" class="fly-12">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/18.jpg" class="fly-13">
+        <a href="./IMG/Flyer/18.jpg" class="fly-13">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/19.jpg" class="fly-14">
+        <a href="./IMG/Flyer/19.jpg" class="fly-14">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/20.jpg" class="fly-15">
+        <a href="./IMG/Flyer/20.jpg" class="fly-15">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/21.jpg" class="fly-16">
+        <a href="./IMG/Flyer/21.jpg" class="fly-16">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/22.jpg" class="fly-17">
+        <a href="./IMG/Flyer/22.jpg" class="fly-17">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/23.jpg" class="fly-18">
+        <a href="./IMG/Flyer/23.jpg" class="fly-18">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/24.jpg" class="fly-19">
+        <a href="./IMG/Flyer/24.jpg" class="fly-19">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/25.jpg" class="fly-20">
+        <a href="./IMG/Flyer/25.jpg" class="fly-20">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/26.jpg" class="fly-21">
+        <a href="./IMG/Flyer/26.jpg" class="fly-21">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/27.jpg" class="fly-22">
+        <a href="./IMG/Flyer/27.jpg" class="fly-22">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/28.jpg" class="fly-23">
+        <a href="./IMG/Flyer/28.jpg" class="fly-23">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/29.jpg" class="fly-24">
+        <a href="./IMG/Flyer/29.jpg" class="fly-24">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/30.jpg" class="fly-25">
+        <a href="./IMG/Flyer/30.jpg" class="fly-25">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/31.jpg" class="fly-26">
+        <a href="./IMG/Flyer/31.jpg" class="fly-26">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/32.jpg" class="fly-27">
+        <a href="./IMG/Flyer/32.jpg" class="fly-27">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/33.jpg" class="fly-28">
+        <a href="./IMG/Flyer/33.jpg" class="fly-28">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/34.jpg" class="fly-29">
+        <a href="./IMG/Flyer/34.jpg" class="fly-29">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/35.jpg" class="fly-30">
+        <a href="./IMG/Flyer/35.jpg" class="fly-30">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/36.jpg" class="fly-31">
+        <a href="./IMG/Flyer/36.jpg" class="fly-31">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/37.jpg" class="fly-32">
+        <a href="./IMG/Flyer/37.jpg" class="fly-32">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/Flyer/38.jpg" class="fly-33">
+        <a href="./IMG/Flyer/38.jpg" class="fly-33">
             <i class='bx bx-expand'></i>
         </a>
 
