--- a/pixel.html
+++ b/pixel.html
@@ -19,107 +19,107 @@
 
        <div class="image-gallery">
 
-        <a href="IMG/pixel/1-01.jpg" class="fly-1">
+        <a href="./IMG/pixel/1-01.jpg" class="fly-1">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-02.jpg" class="fly-2">
+        <a href="./IMG/pixel/1-02.jpg" class="fly-2">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-03.jpg" class="fly-3">
+        <a href="./IMG/pixel/1-03.jpg" class="fly-3">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-04.jpg" class="fly-4">
+        <a href="./IMG/pixel/1-04.jpg" class="fly-4">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-05.jpg" class="fly-5">
+        <a href="./IMG/pixel/1-05.jpg" class="fly-5">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-06.jpg" class="fly-6">
+        <a href="./IMG/pixel/1-06.jpg" class="fly-6">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-07.jpg" class="fly-7">
+        <a href="./IMG/pixel/1-07.jpg" class="fly-7">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-08.jpg" class="fly-8">
+        <a href="./IMG/pixel/1-08.jpg" class="fly-8">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-09.jpg" class="fly-9">
+        <a href="./IMG/pixel/1-09.jpg" class="fly-9">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-10.jpg" class="fly-10">
+        <a href="./IMG/pixel/1-10.jpg" class="fly-10">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-11.jpg" class="fly-11">
+        <a href="./IMG/pixel/1-11.jpg" class="fly-11">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-12.jpg" class="fly-12">
+        <a href="./IMG/pixel/1-12.jpg" class="fly-12">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-13.jpg" class="fly-13">
+        <a href="./IMG/pixel/1-13.jpg" class="fly-13">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-14.jpg" class="fly-14">
+        <a href="./IMG/pixel/1-14.jpg" class="fly-14">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-15.jpg" class="fly-15">
+        <a href="./IMG/pixel/1-15.jpg" class="fly-15">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-16.jpg" class="fly-16">
+        <a href="./IMG/pixel/1-16.jpg" class="fly-16">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-17.jpg" class="fly-17">
+        <a href="./IMG/pixel/1-17.jpg" class="fly-17">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-18.jpg" class="fly-18">
+        <a href="./IMG/pixel/1-18.jpg" class="fly-18">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-19.jpg" class="fly-19">
+        <a href="./IMG/pixel/1-19.jpg" class="fly-19">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-20.jpg" class="fly-20">
+        <a href="./IMG/pixel/1-20.jpg" class="fly-20">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-21.jpg" class="fly-21">
+        <a href="./IMG/pixel/1-21.jpg" class="fly-21">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-22.jpg" class="fly-22">
+        <a href="./IMG/pixel/1-22.jpg" class="fly-22">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-23.jpg" class="fly-23">
+        <a href="./IMG/pixel/1-23.jpg" class="fly-23">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-24.jpg" class="fly-24">
+        <a href="./IMG/pixel/1-24.jpg" class="fly-24">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-25.jpg" class="fly-25">
+        <a href="./IMG/pixel/1-25.jpg" class="fly-25">
             <i class='bx bx-expand'></i>
         </a>
 
-        <a href="IMG/pixel/1-26.jpg" class="fly-26">
+        <a href="./IMG/pixel/1-26.jpg" class="fly-26">
             <i class='bx bx-expand'></i>
         </a>
 
