--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
         <!-- header site -->
         <header>
-            <div class="logo"><span>A</span>K...</div>
+            <div class="logo"><span>AK</span>Creation</div>
             <ul class="navlist">
                 <li><a href="#home" style="--i:1">Home</a></li>
                 <li><a href="#about"style="--i:2">About</a></li>
@@ -41,7 +41,7 @@
                     </h3>
                 </div><br><br>
 
-                <p> I do computer design, web page design, UI/UX design and advertising design along with education and short term corporate training.
+                <p> I do computer design, web page design, UI/UX design and advertising design along with education and corporate training. 
                     It's the only way I measure myself for corporate training, because it's the only way I measure my knowledge to all of you.</p>
 
                 <div class="info-box">
@@ -206,14 +206,11 @@
                 <span>Let me introduce myself</span>
                 <h2>About Me</h2>
                 <h3>A Story of good</h3>
-                <p>Although I do not have much organizational experience in the fields I have mentioned above, 
-                    I am a person who has educational knowledge in handling these. I have six months of professional
-                     experience in graphic design and more than two years of creating graphics for others from an 
-                     environment that is unique to me. I also have technical knowledge about video editing, 
-                     3D design, and am more interested in learning UI/UX design. Also, although I have gained 
-                     knowledge about this from Maradana - Sri Lanka College of Technology, I created these 
-                     web pages to get practical corporate training and employment. 
-                    I would like to inform you that all of you can see what I can do in this web page.</p>
+                <p>I am educated enough to handle these. 
+                    I have one year of professional experience in graphic design and over three years of creating graphics
+                     for others in a unique environment. 
+                    I have technical knowledge in video editing, 3D design and can also design UI/UX. 
+                    I invite you all to see what I can do with this web page.</p>
 
                 <div class="btn-box">
                     <a href="#" class="btn">Read More!</a>
@@ -418,23 +415,23 @@
     <div class="container">
         <div class="fillter-buttons scroll-scale">
             <button class="button" data-filter="all">All</button>
-            <button class="button" data-filter=".product">3DVault</button>
+            <button class="button" data-filter=".product">VideoHub</button>
             <button class="button" data-filter=".inter">GraphicHub</button>
-            <button class="button" data-filter=".web">Web App</button>
+            <button class="button" data-filter=".web">3D&Cad</button>
         </div>
 
     <div class="portfolio-gallery scroll-bottom">
         <div class="port-box mix product">
             <div class="port-image">
-                <img src="./IMG/portfolio/11.jpg" alt="">
+                <img src="./IMG/portfolio/22.jpg" alt="">
             </div>
             <div class="port-content">
-                <h3>Model 3d and Cad drawing</h3>
+                <h3>After effect and 2D animation</h3>
                 <p>
-                    Designer's 3D model & CAD file:<br>precise, intricate, digitally crafted
-                    <br>representation with meticulous detail.
+                    Designer's Video editing and 2d animation clips,adds effects, refines audio, crafting a polished
+                    and engaging visual narrative..
                 </p>
-                <a href="3d.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                <a href="https://www.youtube.com/@akarenacreation" target="_blank"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
 
@@ -448,7 +445,7 @@
                     Designer's video editing file: artfully combines clips,<br>adds effects, refines audio, crafting a polished
                     <br> and engaging visual narrative..
                 </p>
-                <a href="https://drive.google.com/drive/folders/1DrfynFWMe52oXuBn9zHMoK6xqkKCoJYz?usp=sharing" target="_blank"><i class='bx bx-link-external'></i></a>
+                <a href="menuhome.html" target="_blank"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
 
@@ -496,15 +493,15 @@
 
         <div class="port-box mix web">
             <div class="port-image">
-                <img src="./IMG/portfolio/66.jpg" alt="">
+                <img src="./IMG/portfolio/11.jpg" alt="">
             </div>
             <div class="port-content">
-                <h3>Web Design</h3>
+                <h3>Model 3d and Cad drawing</h3>
                 <p>
-                    These web pages will be filled with the experiences of the web page I have created. Check out the quality here.
-                    The file will change over time.
+                    Designer's 3D model & CAD file:<br>precise, intricate, digitally crafted
+                    <br>representation with meticulous detail.
                 </p>
-               <a href="https://drive.google.com/drive/u/2/folders/1kOWAhurV5xWG98lzYY6REpo_AGVon5Ku" target="_blank"><i class='bx bx-link-external'></i></a>
+               <a href="3d.html" target="_blank"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
 
@@ -547,3 +544,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
